# comp261_project

./: .gitignore  LICENSE  README.md  index.html  junah.txt  pyproject.toml  requirements.txt  script.js  style.css  test.txt
data/: trading_symbols.txt
data/processed/: sp500_filtered_files.csv
data/reference/: all_kaggle_tickers.txt  sp500_symbols_template.csv  symbol_names.csv
frontend_demo/: README.md  index.html  script.js  style.css
scripts/: audit_dataset.py  build_training_table.py  daily_update.py  filter_sp500_files.py  load_one_stock.py  merge_for_ml.py  merge_scraper_kaggle.py  run_pipeline.py
src/: README  cleaning.py
src/dataset/: README  cleaning.py  daytrading_loading.py  parquet_converter.py  requirements.txt
src/day_trading_bot/api/: server.py
src/day_trading_bot/backtest/: engine.py
src/day_trading_bot/data/: bar_loader.py  contract.py  loader.py
src/day_trading_bot/monitoring/: logger.py
src/day_trading_bot/pipeline/: __init__.py  config.py  detector.py  fetcher.py  indexer.py  market_data.py  news_fetcher.py  orchestrator.py  validator.py  versioning.py
src/machine_learning/: README  deep_backtest.py  deep_feature_engineering.py  deep_train_model.py  feature_engineering.py  feature_engineering_backup.py  feature_valid.py  generate_report.py  generate_signals.py  requirements.txt  run_pipeline.py  sample_output.txt  train_valid.py
tests/: test_bar_loader.py  test_schema.py
