[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "day-trading-bot"
version = "0.1.0"
description = "Academic day trading bot prototype"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
